syntax = "proto3";

package dxos.test;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "any.proto";
import "@dxos/protobuf-test/src/foo.proto";

message Key {
  required bytes data = 1;
}

message Any {
  string foo = 1;
}

message Scalars {
  double doubleField = 1;
  float floatField = 2;
  int32 int32Field = 3;
  int64 int64Field = 4;
  uint32 uint32Field = 5;
  uint64 uint64Field = 6;
  sint32 sint32Field = 7;
  sint64 sint64Field = 8;
  fixed32 fixed32Field = 9;
  fixed64 fixed64Field = 10;
  sfixed32 sfixed32Field = 11;
  sfixed64 sfixed64Field = 12;
  bool boolField = 13;
  string stringField = 14;
  bytes bytesField = 15;
}

message ComplexFields {
  repeated Key repeatedField = 16;
  required Key requiredField = 17;
  map<string, Key> mappedField = 18;

  message Inner {
    string foo = 1;
    InnerEnum bar = 2;
  }

  enum InnerEnum {
    FOO = 1;
    BAR = 2;
  }

  Inner inner = 19;

  Any myAny = 20;
  google.protobuf.Any googleAny = 21;
  dxos.test.any.Any importedAny = 22;
}

message WithTimestamp {
  google.protobuf.Timestamp timestamp = 1;
}

message Outer {
  ComplexFields.Inner inner = 1;
  
  message Inner {
    ComplexFields.InnerEnum inner = 1;
  }
}

enum TaskType {
  IN_PROGRESS = 1;
  COMPLETED = 2;
}

message Task {
  string id = 1;
  string title = 2;
  required Key key = 3;
  required TaskType type = 4;
  google.protobuf.Any googleAny = 5;
}


message TaskList {
  repeated Task tasks = 1;
}

message SubstitutedByInterface {
  string foo = 1;
}

message TaskCount {
  int32 count = 1;
}

service TestService {
  rpc CountTasks(TaskList) returns (TaskCount);
  rpc SubscribeTasks(Key) returns (stream Task);
}
